# Images_DRF_API

./: Dockerfile  docker-compose.yml  pyproject.toml
Project1/: db.sqlite3
Project1/Project1/: settings.py  urls.py
Project1/images_api/: models.py  serializers.py  urls.py  utils.py  views.py
Project1/images_api/migrations/: 0001_initial.py  0002_image_thumbnail.py  0003_plan.py  0004_userprofile.py
